# zmath

./: CMakeLists.txt  README.md
include/: zmath.h
include/zmath/: constant.h  fft.h  linalg.h  polynomial.h  utils.h
include/zmath/Linalg/: linalg.h  vec2.h  vec3.h
include/zmath/Polynomial/: polynomial.h
include/zmath/utils/: constant.h  fft.h
src/: test.cpp
test/: test.cpp
